--- a/app/src/main/res/layout/fragment_paramedic_call_for_support.xml
+++ b/app/src/main/res/layout/fragment_paramedic_call_for_support.xml
@@ -86,7 +86,7 @@
         app:layout_constraintTop_toBottomOf="@+id/checkBox_C" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayout2"
+        android:id="@+id/locationInput"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -117,7 +117,7 @@
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">
+        app:layout_constraintTop_toBottomOf="@+id/locationInput">
 
         <Button
             android:id="@+id/button"
