Dodany widok przeglądania listy karetek i oglądania oraz edycji ilości wyposażenia wybranej karetki

--- a/app/src/main/res/layout/fragment_paramedic_screen.xml
+++ b/app/src/main/res/layout/fragment_paramedic_screen.xml
@@ -95,5 +95,18 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/button3"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/button5"
+            android:layout_width="125dp"
+            android:layout_height="53dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="71dp"
+            android:layout_marginBottom="60dp"
+            android:text="equipment"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/button3" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
