--- a/app/src/main/res/layout/fragment_disease_form.xml
+++ b/app/src/main/res/layout/fragment_disease_form.xml
@@ -9,53 +9,31 @@
         android:id="@+id/header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Allergy"
+        android:text="Disease"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
         android:textColor="@color/green_dark"
         android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+
     <TextView
-        android:id="@+id/type_label"
+        android:id="@+id/name_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-        android:text="Allergy Type"
+        android:text="Disease name"
         android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="@id/header"
         app:layout_constraintTop_toBottomOf="@id/header"
         android:layout_margin="15dp"/>
-
-    <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-        android:id="@+id/type_input"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginHorizontal="20dp"
-        app:boxCornerRadiusBottomEnd="20dp"
-        app:boxCornerRadiusBottomStart="20dp"
-        app:boxCornerRadiusTopEnd="20dp"
-        app:boxCornerRadiusTopStart="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/type_label">
-        <AutoCompleteTextView
-            android:id="@+id/autoCompleteTextView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:inputType="none"
-            android:text="Choose" />
-    </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/start_date_field"
         android:layout_width="match_parent"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="10dp"
         android:layout_height="wrap_content"
-        android:hint="Allergy name"
+        android:hint="Disease name"
         app:endIconMode="clear_text"
         app:layout_constraintStart_toStartOf="@id/header"
         app:layout_constraintEnd_toEndOf="@id/header"
@@ -65,7 +43,7 @@
         app:startIconCheckable="true"
         app:boxCornerRadiusTopEnd="20dp"
         app:boxCornerRadiusTopStart="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/type_input">
+        app:layout_constraintTop_toBottomOf="@+id/name_label">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/start_date_input"
@@ -101,12 +79,12 @@
         app:boxCornerRadiusTopStart="20dp"
         app:layout_constraintTop_toBottomOf="@+id/Additional_label">
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/adittional_info_input"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:inputType="text|textMultiLine"
-        android:gravity="top"/>
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/adittional_info_input"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="text|textMultiLine"
+            android:gravity="top"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.switchmaterial.SwitchMaterial
