--- a/app/src/main/res/layout/fragment_incident.xml
+++ b/app/src/main/res/layout/fragment_incident.xml
@@ -69,6 +69,17 @@
             android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
 
+    <Button
+        android:id="@+id/openMapButton"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="-45dp"
+        android:background="@drawable/ic_map_24"
+        app:layout_constraintBottom_toBottomOf="@+id/locationInput"
+        app:layout_constraintStart_toEndOf="@+id/locationInput"
+        app:layout_constraintTop_toBottomOf="@+id/localisation" />
+
     <TextView
         android:id="@+id/incidentDescription"
         android:layout_width="0dp"
@@ -94,6 +105,7 @@
         app:boxCornerRadiusBottomStart="20dp"
         app:boxCornerRadiusTopEnd="20dp"
         app:boxCornerRadiusTopStart="20dp"
+        android:hint="Describe what happened on site"
         app:counterEnabled="true"
         app:counterMaxLength="150"
         app:layout_constraintEnd_toEndOf="parent"
@@ -103,8 +115,9 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/incidentDescriptionText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text" />
+            android:layout_height="130dp"
+            android:gravity="top"
+            android:inputType="text|textMultiLine" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
