--- a/app/src/main/res/layout/fragment_incident_location_picker.xml
+++ b/app/src/main/res/layout/fragment_incident_location_picker.xml
@@ -12,7 +12,7 @@
 
         <TextView
             android:id="@+id/title"
-            style="@style/TextAppearance.MaterialComponents.Headline5"
+            style="@style/TextAppearance.MaterialComponents.Headline4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/white"
@@ -24,6 +24,9 @@
 
         <org.osmdroid.views.MapView
             android:id="@+id/map"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:padding="5dp"
             android:layout_width="300dp"
             android:layout_height="450dp"
             app:layout_constraintEnd_toEndOf="parent"
