--- a/app/src/main/res/layout-sw600dp/fragment_paramedic_call_for_support.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_paramedic_call_for_support.xml
@@ -30,6 +30,7 @@
         android:text="@string/paramedic_call_button_fireStation"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/textView7"
+        app:layout_constraintTop_toBottomOf="@id/checkBox_A"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/textView7"
         tools:layout_editor_absoluteY="187dp" />
@@ -145,8 +146,8 @@
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigationView2"
-        android:layout_width="229dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="start"
         app:headerLayout="@layout/guest_navigation_drawer_header"
         app:layout_constraintBottom_toBottomOf="parent"
