--- a/app/src/main/res/layout-sw600dp/fragment_add_victim_info.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_add_victim_info.xml
@@ -19,7 +19,7 @@
         android:textColor="@color/green_dark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.243"
-        app:layout_constraintStart_toEndOf="@+id/navigationView3"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -134,7 +134,7 @@
         android:layout_marginTop="32dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/navigationView3"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout8">
 
         <Button
@@ -231,17 +231,21 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout7" />
 
 
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/navigationView3"
-        android:layout_width="229dp"
-        android:layout_height="0dp"
-        android:layout_gravity="start"
-        app:headerLayout="@layout/guest_navigation_drawer_header"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <LinearLayout
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:menu="@menu/paramedic_navigation_drawer" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
+            app:menu="@menu/bottom_paramedic_navigation" />
+
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
